--- a/src/scene.pug
+++ b/src/scene.pug
@@ -1,8 +1,14 @@
 a-scene(background="color: black" fog="type: exponential; color: black; density: 0.01")
-  a-camera(position="0 0 10")
+  a-entity(position="0 0 10")
+    a-camera
+    a-light(color="white")
   a-entity(animation="property: rotation; to: 0 0 360; loop: true; dur: 30000; easing: linear")
     a-entity(animation="property: rotation; to: 0 360 0; loop: true; dur: 60000; easing: linear")
       each x in [-4, -2, 0, 2, 4]
         each y in [-4, -2, 0, 2, 4]
           each z in [-4, -2, 0, 2, 4]
-            a-box(position=`${x} ${y} ${z}` metalness="0.9" roughness="0.7" color="#f7f")
+            a-box(
+              position=`${x} ${y} ${z}`
+              color=`rgb(${256*(x+4)/8}, ${256*(y+4)/8}, ${256*(z+4)/8})`
+              metalness="0.9" 
+              roughness="0.7")
